2012-05-19  Julien Bect  <julien.bect@supelec.fr>

	Preparing headers for release 1.1.

	* almost-all-files: Updated headers (copyright, version).

	Miscellaneous changes.

	* core/stk_feval.m: Added optional argument 'progress_msg'.
	* utils/config/stk_select_optimizer.m: Minor change to avoid
	systematic checkinging which optimizer has to be used (as shown by
	the comments, this was a mistake...).
	* examples/example07.m: Fixed doc.

2012-05-02  Julien Bect  <julien.bect@supelec.fr>

	Improved compatibility with older versions of Matlab.

	* core/stk_param_estim: Added a try-catch block to catch "invalid
	parameter" errors generated by optimset().

2012-04-22  Julien Bect  <julien.bect@supelec.fr>

	Removed the undue dependency on the 'optim' package under Octave.

	* utils/config/stk_check_octave_packages.m: Removed dependency.

	Doc fixing.

	* README.txt: Fixed doc.
	* utils/config/stk_check_octave_packages.m: Fixed doc.

2012-04-21  Julien Bect  <julien.bect@supelec.fr>

	Docs fixing.

	* core/stk_make_matcov.m: Fixed doc.
	* core/stk_predict.m: Fixed doc.

2012-02-21  Julien Bect  <julien.bect@supelec.fr>

	Added a test for presence of GLPK in stk_check_octave_packages().

	* utils/config/stk_check_octave_packages.m: Added test.
	* README.txt: Fixed doc.

2012-02-20  Julien Bect  <julien.bect@supelec.fr>

	Fixed two bugs in run_all_examples.m.

	* examples/run_all_examples.m: Two bugfixes + several minor
	changes. The first bug was related to the try/catch block
	("advanced" syntax not supported by Octave, explicitly calling
	lasterror() is safer). The second bug was related to the possible
	occurence of errors without an error identifier.

	Fixed a bug in stk_set_root().

	* utils/config/stk_set_root.m: Fixed a bug in stk_set_root()
	related to the use of rmpath(). This ensures compatibility with
	Octave 3.0.2.

2012-02-19  Julien Bect  <julien.bect@supelec.fr>

	Fixed a bug under Octave (use of Matlab-like assert statements).
