@@ -113,6 +113,7 @@ path = { ...
     fullfile(root, 'utils'            ), ...
     fullfile(root, 'utils', 'config'  ), ...
     fullfile(root, 'utils', 'plot'    ), ...
+    fullfile(root, 'utils', 'misc'    ), ...
     fullfile(root, 'utils', 'specfun' )   };
 
 end % stk_makepath
